portfolio/src/main/webapp/style.css
html * {
    font-family: 'Roboto', arial, sans-serif;
}

body {
    margin: 0%;
}

#sidenav {
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    padding: 15px 25px 15px 25px;
    background-color: #0F9D58;
    overflow-x: hidden;
}

#sidenav-footer {
    position: fixed; 
    bottom: 15px;
    left: 16px;
}

#sidenav-footer a {
    text-decoration: none;
}

#sidenav-footer div {
    display: flex;
    align-items: center;
    height: 45px;
}

#sidenav-footer p {
    font-size: 1.1em;
    color: #FFF;
}

#sidenav-footer .fab, #sidenav-footer .fas {
    font-size: 1.2em;
    display: inline;
    color: white;
    float: left;
    margin-right: 4px;
}

.profile-img {
    width: 200px;
    height: 200px;
    clip-path: circle(100px at center);
}

#sidenav h1, #sidenav h2 {
    text-align: center;
    color: #FFF;
    margin: 10px 0 10px 0;
}

#content-container {
    margin-left: 250px;
}

#header {
    background-color: #4285F4;
    height: 75px;
    width: 100%;
    position: fixed;
    top: 0;
    z-index: 1;
}

.tab-bar {
    margin: 0;
    position: relative;
    display:table-row;
}

.tab-bar li {
    font-weight: bold;
    font-size: 1.3em;
    display: table-cell;
    height: 75px;
    list-style-type: none;
    vertical-align: middle;
}

.tab-bar a {
    color: #FFF;
    text-decoration: none;
    display: block;
    padding: 25px 20px 25px 20px;
}

.tab-bar a:hover {
    background: rgba(0,0,0,0.08);
}

#content {
    padding: 0 10px 0 10px;
    margin-top: 90px;
}

section {
    margin-bottom: 30px;
}

section h1 {
    font-size: 1.9em;
    margin-bottom: 8px;
    margin-top: -90px;
    padding-top: 90px;
    margin-left: 16px;
}

section p {
    font-size: 1.1em;
    margin-top: 0;
    max-width: 900px;
}

section>p {
    padding-left: 16px;
}

section hr {
    margin-top: 25px;
    border-color: #DB4437;
}

#projects img, #life img {
    display: inline-block;
    width: 300px;
    height: 300px;
    margin: 16px;
}

#life img {
    clip-path: circle(140px at center);
}

.card {
    display: inline-block;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    margin: 12px;
    transition: 0.3s;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.project-info {
    float: right;
    padding: 12px;
    height: 300px;
}

#life .project-info {
    height: 312px;
    width: 400px;
    position: relative;
}

#life p {
    top: 50%;
    position: absolute;
    transform: translate(0,-50%);
}

.project-info p {
    /* width: 400px; */
}

.project-info a {
    font-size: 1.1em;
}

.skill-list {
    display: inline-table;
    margin-right: 45px;
}

.skill-list h2 {
    text-align: center;
    margin: 0;
    margin-left: -16px;
}

.skill-list ul {
    margin-top: 4px;
}

#comments {
    width: 725px;
}

#comments h1 {
    display: inline-block;
}

#comments-area {
    background-color: rgba(0,0,0,0.04);
    width: 714.4px;
    padding: 8px 6px 8px 8px;
    margin-top: 0;
    box-sizing: border-box;
    text-align: center;
}

#comments-container {
    text-align: left;
}

.comment {
    margin: 8px 0;
    padding: 14px 4px 14px 14px;
    width: 680px;
    background-color: white;
}

.comment h3 {
    display: inline-block;
    margin: 0 6px 6px 0;
}

.time-passed {
    display: inline-block;
}

.comment p {
    margin: 0;
}

#create-comment {
    margin: 8px 0;
    padding: 14px 4px 14px 14px;
    width: 680px;
    background-color: #FFF;
}

#new-comment {
    width: 88%;
    font-size: 1.1em;
    margin-right: 8px;
    box-sizing: border-box;
}

.comments-selector-container {
    float: right;
    display: inline-block;
    padding-top: 8px;
    font-size: 1.1em;
}

#language-container {
    padding-right: 20px;
}

#delete-button {
    color: #be0000;
    font-size: 1.1em;
    padding-left: 12px;
    cursor: pointer;
}

#user-area {
    position: fixed;
    top: 15px;
    right: 40px;
    font-size: 1.1em;
}

#user-area * {
    display: inline-block;
    float: left;
    margin-left: 8px;
}

.user-button {
    background: white;
    padding: 5px;
    border-radius: 5px;
    text-decoration: none;
    color: #4285F4;
    font-weight: bold;
    margin-top: 10px
}

#nickname {
    color: #fff;
    font-weight: bold;
}

#nickname a {
    float: none;
    cursor: pointer;
    display: inline;
}

.profile-thumb {
    width: 45px;
    height: 45px;
    clip-path: circle(22px at center);
}

#popup-container {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, .3);
    z-index: 5;
}

#popup {
    width: 400px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    text-align: center;
}

.body-no-scroll {
    overflow: hidden;
}

.close-x {
    cursor: pointer;
    font-size: 1.5em;
    position: absolute;
    right: 10px;
    top: 5px;
}

.cards-flex {
    display: flex;
    flex-flow: row wrap;
    max-width: 1500px;
}

.cards-flex .card {
    display: flex;
    height: 100%;
    max-width: 760px;
    min-width: 500px;
    flex-basis: 500px;
    flex-grow: 2;
}

.cards-flex .card img {
    display: block;
}

.cards-flex .card h2 {
    margin: 0 0 12px 0;
}

